--- a/native/cross/windows-i686-mingw-w64.ini
+++ b/native/cross/windows-i686-mingw-w64.ini
@@ -8,3 +8,7 @@ system = 'windows'
 cpu_family = 'x86'
 cpu = 'i686'
 endian = 'little'
+
+[built-in options]
+c_args = '-static-libgcc'
+c_link_args = '-static-libgcc'
