Pass --kill-at to the linker when building for 32-bit Windows

--- a/native/cross/windows-i686-mingw-w64.ini
+++ b/native/cross/windows-i686-mingw-w64.ini
@@ -11,4 +11,4 @@ endian = 'little'
 
 [built-in options]
 c_args = '-static-libgcc'
-c_link_args = '-static-libgcc'
+c_link_args = '-static-libgcc -Wl,--kill-at'
